--- a/src/components/snippets/Logo.astro
+++ b/src/components/snippets/Logo.astro
@@ -1,5 +1,5 @@
 ---
-import logo from '../../assets/img/branding/invitaly_logo--small.svg'
+import logo from '@assets/img/branding/invitaly_logo--small.svg?url'
 
 interface Props {
   width?: number;
