--- a/src/components/DailyMenu.astro
+++ b/src/components/DailyMenu.astro
@@ -1,7 +1,7 @@
-<section class="container">
-	<h3 id="daily-menu-header">Business Lunch Menu</h3>
+<section class="container" id="daily-menu">
+	<h3>Business Lunch Menu</h3>
 	<i>12:00 - 15:00</i>
-	<ul id="daily-menu">
+	<ul id="daily-menu-list">
 		<li class="first-course">First Course</li>
 		<li class="second-course">Main Course</li>
 		<li class="third-course">Third Course</li>
@@ -16,7 +16,11 @@
 	h3 {
 		font-size: clamp(2rem, 4vw, 3rem);
 	}
-	#daily-menu {
+	i {
+		background-color: var(--c-primary-light);
+		padding: 0.3rem 0.5rem;
+	}
+	#daily-menu-list {
 		margin-bottom: var(--gutter);
 	}
 	li[class] {
@@ -61,7 +65,7 @@
 			width: min(100%, 50rem);
 			text-align: center;
 		}
-		#daily-menu {
+		#daily-menu-list {
 			margin: 0 auto;
 		}
 		li[class] {
@@ -73,17 +77,17 @@
 
 <style is:inline>
 	
-	#daily-menu li:not([class]) {
+	#daily-menu-list li:not([class]) {
 		padding-block: 0.7rem;
 		line-height: 1.5;
 		border-block: 1px solid transparent;
 	}
-	#daily-menu li:not([class]):hover {
+	#daily-menu-list li:not([class]):hover {
 		background-color: hsl(0 0% 99% / 50%);
 		border-block: 1px solid hsl(0 0% 95%);
 	}
 	@media (width < 769px) {
-		#daily-menu li:not([class]) {
+		#daily-menu-list li:not([class]) {
 			padding: 0.4rem 0 0;
 		}
 	}
@@ -91,8 +95,8 @@
 
 <script>
 
-	const header = document.querySelector('#daily-menu-header');
-	const ul = document.querySelector('#daily-menu');
+	const header = document.querySelector('#daily-menu h3');
+	const ul = document.querySelector('#daily-menu-list');
 	const firstCourse = document.querySelector('.first-course');
 	const secondCourse = document.querySelector('.second-course');
 	const thirdCourse = document.querySelector('.third-course');
