--- a/src/components/HeroVideo.astro
+++ b/src/components/HeroVideo.astro
@@ -9,7 +9,7 @@ import { t } from "i18next";
     <iframe src="https://player.vimeo.com/video/798735916?h=7275a952db&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;background=1&amp;autoplay=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Invitaly EnoTrattoria" ></iframe>
   </div> -->
   <div class="video-wrapper">
-    <video autoplay muted loop>
+    <video autoplay muted playsinline loop>
       <source
         src="https://res.cloudinary.com/de8fnhgss/video/upload/c_scale,vc_auto,w_1920/v1676496850/Invitaly/invitaly_rvsk6p.mp4"
         type="video/mp4" />
@@ -86,6 +86,5 @@ import { t } from "i18next";
   }
 
 </style>
-<!-- <script src="src/assets/js/lazyframe.js" type="module"/> -->
 
   <!-- <script src="src/assets/js/loco.js" type="module"/> -->
