--- a/src/components/snippets/MobileNav.astro
+++ b/src/components/snippets/MobileNav.astro
@@ -33,6 +33,10 @@ import LanguageSelector from "./LanguageSelector.astro";
     flex: 1; /* places logo in the middle */
     justify-content: flex-end;
     align-items: center;
+
+    & :global(.link) {
+      margin-bottom: 0;
+    }
   }
   section {
     position: fixed;
