menu list animation fix

--- a/src/components/snippets/MobileNav.astro
+++ b/src/components/snippets/MobileNav.astro
@@ -154,9 +154,12 @@ import LanguageSelector from "./LanguageSelector.astro";
         &:nth-child(3) a {
           animation-delay: 0.5s;
         }
+        &:nth-child(4) a {
+          animation-delay: 0.7s;
+        }
       }
       & section {
-        animation-delay: 0.6s;
+        animation-delay: 0.8s;
       }
     }
   }
