--- a/src/components/snippets/Pizzeria.astro
+++ b/src/components/snippets/Pizzeria.astro
@@ -8,7 +8,7 @@ const pizzeriaPhoto = 'https://pizza.invitaly.cz/assets/img/food/140422/21-03Inv
 <section class="pizzeria">
   <h3 class="small">Invitaly Piazzetta</h3>
   <p>{t("pizzeria.p")}</p>
-  <a href={t("pizzeria.url")} data-event="pizzeriaClick">
+  <a href={t("pizzeria.url")} data-event="pizzeriaClick" target="_blank">
     <Arrow small buttonText={t("pizzeria.buttonText")} />
     <div class="zoom observe">
       <Image src={pizzeriaPhoto} width={400} height={600} format="avif" alt="Invitaly Pizza" />
