fix img source for Image component in Head

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -3,9 +3,9 @@ import { t } from "i18next";
 import { HeadHrefLangs } from "astro-i18next/components";
 import TagManager from "./snippets/TagManager.astro";
 
-import appleTouchIcon from '../assets/img/favicon/apple-touch-icon.png'
-import favicon32 from '../assets/img/favicon/favicon-32x32.png'
-import favicon16 from '../assets/img/favicon/favicon-16x16.png'
+import appleTouchIcon from '../assets/img/favicon/apple-touch-icon.png?url'
+import favicon32 from '../assets/img/favicon/favicon-32x32.png?url'
+import favicon16 from '../assets/img/favicon/favicon-16x16.png?url'
 ---
 
 <head>
