--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -18,7 +18,7 @@ import favicon16 from '../assets/img/favicon/favicon-16x16.png?url'
   <meta name="generator" content={Astro.generator} />
   <title>{t("site.title")}</title>
   <meta name="description" content={t("site.description")} />
-  <meta name="robots" content="noindex, nofollow" />
+  <meta name="robots" content="index, follow" />
   <HeadHrefLangs />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
