font optimizer, trygin partytown again

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -2,6 +2,7 @@
 import { t } from "i18next";
 import { HeadHrefLangs } from "astro-i18next/components";
 import TagManager from "./snippets/TagManager.astro";
+import { GoogleFontsOptimizer } from "astro-google-fonts-optimizer";
 
 import appleTouchIcon from '../assets/img/favicon/apple-touch-icon.png?url'
 import favicon32 from '../assets/img/favicon/favicon-32x32.png?url'
@@ -20,14 +21,15 @@ import favicon16 from '../assets/img/favicon/favicon-16x16.png?url'
   <meta name="description" content={t("site.description")} />
   <meta name="robots" content="index, follow" />
   <HeadHrefLangs />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <GoogleFontsOptimizer url="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"></GoogleFontsOptimizer>
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
   <link
     rel="preload"
     href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
     as="style"
-    onload="this.onload=null;this.rel='stylesheet'"
+    onload="this.onload=null;this.removeAttribute('media');"
   />
   <noscript>
     <link
@@ -35,6 +37,6 @@ import favicon16 from '../assets/img/favicon/favicon-16x16.png?url'
       rel="stylesheet"
       type="text/css"
     />
-  </noscript>
+  </noscript> -->
   <TagManager />
 </head>
