add lunch menu img to nav

--- a/src/components/DailyMenu.astro
+++ b/src/components/DailyMenu.astro
@@ -24,6 +24,7 @@ import { t } from "i18next";
 	i {
 		background-color: var(--c-primary-light);
 		padding: 0.3rem 0.5rem;
+		margin-left: 0.5rem;
 	}
 	#daily-menu-list {
 		margin-bottom: var(--gutter);
