update daily menu format

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -4,9 +4,9 @@ import { HeadHrefLangs } from "astro-i18next/components";
 import TagManager from "./snippets/TagManager.astro";
 import { GoogleFontsOptimizer } from "astro-google-fonts-optimizer";
 
-import appleTouchIcon from '../assets/img/favicon/apple-touch-icon.png?url'
-import favicon32 from '../assets/img/favicon/favicon-32x32.png?url'
-import favicon16 from '../assets/img/favicon/favicon-16x16.png?url'
+import appleTouchIcon from '../assets/img/favicon/apple-touch-icon.png?url';
+import favicon32 from '../assets/img/favicon/favicon-32x32.png?url';
+import favicon16 from '../assets/img/favicon/favicon-16x16.png?url';
 ---
 
 <head>
