--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -5,7 +5,7 @@ import { Picture } from '@astrojs/image/components';
 import img2 from "@assets/img/body/INV2-217_065.jpg"
 import img3 from "@assets/img/body/INV2-217_051.jpg"
 import Arrow from "./snippets/Arrow.astro";
-import DailyMenu from "./DailyMenu.astro";
+import DailyMenu from "./DailyMenuV1.astro";
 
 interface Props {
   menuUrl?: string;
